periodic update after a couple weeks

--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+lab1/hp_overview.docx
+lab1/GF21-SiGe-PA-0705.pdf
+lab1/CAFU_testsite_stitched_image_RES11_area.jpg
+lab1/lab1_intro_to_measurement.docx
+lab1/CAFU_testsite_stitched_image.jpg
+lab1/CAFU_DC_RES_layout_M1_CA_PC_RX.png
+lab1/4200A-914-01C_June_2022_Clarius.pdf
+lab1/.~lock.lab1_intro_to_measurement.docx\#
+lab0/lab0-iverson.zip
